[HRC 25-APR-2017] Added two new components to display and consume data

--- a/11_ply-hello-world/SimpleComponent/demo/index.html
+++ b/11_ply-hello-world/SimpleComponent/demo/index.html
@@ -17,10 +17,10 @@
   </head>
   <body>
     <div class="vertical-section-container centered">
-      <h3>Basic Simple-Component demo duufdde!</h3>
+      <h3>Basic Simple-Component</h3>
       <demo-snippet>
         <template>
-          <Simple-Component prop1="change!! pleasefddddfsd"> </Simple-Component>
+          <Simple-Component prop1="This is Nice ZinZun!!"> </Simple-Component>
         </template>
       </demo-snippet>
     </div>
