[RUL 8-APR-2017] Updates to project 12 to support toasts

--- a/12_node_express/index.html
+++ b/12_node_express/index.html
@@ -5,7 +5,7 @@
         <link rel="import" href="bower_components/google-map/google-map.html">
     </head>
     <body>
-        Kiuvas
-    <google-map latitude="39.7392" longitude="-104.9903"></google-map>
+        <h1>Mi primer Web Component</h1>
+        <google-map latitude="20.5943228" longitude="-100.4051776" zoom="15"></google-map>
     </body>
 </html>
