--- a/12_node_express/sensor.html
+++ b/12_node_express/sensor.html
@@ -4,7 +4,7 @@
         <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script src="node_modules/stompjs/lib/stomp.js"></script>
-        <script src="queue2.js"></script>
+        <script src="queue.js"></script>
         <link rel="import" href="bower_components/paper-toast/paper-toast.html"></script>
 
     </head>
